[package]
name = "vmcircbuf"
description = "A circular buffer that magically wraps around without any copying"
readme = "README.md"
version = "0.1.1"
license = "MIT"
authors = ["Miklos Maroti <mmaroti@gmail.com>"]
repository = "https://github.com/mmaroti/vmcircbuf/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
