[package]
name = "vmcircbuf"
description = "A circular buffer that magically wraps around without any copying"
readme = "README.md"
version = "0.2.8"
license = "MIT"
authors = ["Miklos Maroti <mmaroti@gmail.com>"]
repository = "https://github.com/mmaroti/vmcircbuf/"
documentation = "https://docs.rs/vmcircbuf/"
edition = "2018"
keywords = ["circular", "buffer", "ring", "virtual", "memory"]
categories = ["data-structures", "os"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["basetsd", "handleapi", "memoryapi", "std", "sysinfoapi"] }
